Fix circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,7 @@ jobs:
           command: ./gradlew -PossrhUsername=$OSSRH_USER -PossrhPassword=$OSSRH_PASS publish
 
 workflows:
+  version: 2
   build:
     jobs:
       - deploy:
