--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ plugins {
 //
 
 group 'io.outfoxx'
-version '0.1.0'
+version '0.2.0-SNAPSHOT'
 description 'A Kotlin/Java API for generating .ts source files.'
 
 license {
