Upgrade gradle, simplify publishing scripts

--- a/gradle/maven-publishing.gradle
+++ b/gradle/maven-publishing.gradle
@@ -22,11 +22,6 @@ task javadocJar(type: Jar, dependsOn: dokka) {
 }
 
 
-signing {
-  sign configurations.archives
-}
-
-
 pom {
   
   name 'TypeScript Poet'
@@ -67,45 +62,6 @@ publishing {
   
   publications {
     
-    mavenJavaSigned(MavenPublication) {
-      from components.java
-  
-      // create the sign pom artifact
-      pom.withXml {
-        
-        def pomFile = file("${project.buildDir}/generated-pom.xml")
-        writeTo(pomFile)
-        
-        def pomAscFile = signing.sign(pomFile).signatureFiles[0]
-        artifact(pomAscFile) {
-          classifier = null
-          extension = 'pom.asc'
-        }
-        
-      }
-  
-      artifact sourceJar {
-        classifier "sources"
-      }
-  
-      artifact javadocJar {
-        classifier 'javadoc'
-      }
-      
-      // create the signed artifacts
-      project.tasks.signArchives.signatureFiles.each {
-        artifact(it) {
-          def matcher = it.file =~ /-(sources|javadoc)\.jar\.asc$/
-          if (matcher.find()) {
-            classifier = matcher.group(1)
-          } else {
-            classifier = null
-          }
-          extension = 'jar.asc'
-        }
-      }
-    }
-  
     mavenJava(MavenPublication) {
       from components.java
   
@@ -134,14 +90,7 @@ publishing {
 }
 
 
-model {
-  tasks.generatePomFileForMavenJavaPublication {
-    destination = file("$buildDir/generated-pom.xml")
-  }
-  tasks.publishMavenJavaSignedPublicationToMavenLocal {
-    dependsOn project.tasks.signArchives
-  }
-  tasks.publishMavenJavaSignedPublicationToMavenRepository {
-    dependsOn project.tasks.signArchives
-  }
+signing {
+  required { isReleaseVersion && gradle.taskGraph.hasTask('publishMavenJavaPublicationToMavenRepository') }
+  sign publishing.publications.mavenJava
 }
