--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,10 @@ plugins {
 //
 
 group 'io.outfoxx'
-version '0.2.0-SNAPSHOT'
+version '0.2.1'
 description 'A Kotlin/Java API for generating .ts source files.'
+ext.isSnapshotVersion = version.endsWith('SNAPSHOT')
+ext.isReleaseVersion = !isSnapshotVersion
 
 license {
   header = file('HEADER.txt')
