--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ plugins {
 //
 
 group 'io.outfoxx'
-version '0.2.2-SNAPSHOT'
+version '0.2.2'
 description 'A Kotlin/Java API for generating .ts source files.'
 ext.isSnapshotVersion = version.endsWith('SNAPSHOT')
 ext.isReleaseVersion = !isSnapshotVersion
