--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "sb-js": "^0.3.0"
   }
 }
