--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "lib": ["es6"],
-    "target": "es6",
+    "lib": ["esnext"],
+    "target": "esnext",
     "module": "commonjs",
     "declaration": true,
     "strict": true,
