--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
-    "lodash": "^4.17.11"
+    "immutable": "^4.0.0-rc.10",
+    "lodash": "^4.17.11",
+    "ts-imm": "^0.3.0"
   }
 }
