--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "declaration": true,
     "strict": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
     "outDir": "build"
   }
 }
