--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ts-poet",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.1.0",
+  "description": "code generation DSL for TypeScript",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
-    "test": "jest",
-    "build": "tsc"
+    "prepare": "yarn build && yarn test",
+    "test": "yarn jest",
+    "build": "yarn tsc"
   },
   "keywords": [],
   "author": "Stephen Haberman",
