--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "prepare": "yarn build && yarn test",
     "test": "yarn jest",
-    "build": "yarn tsc"
+    "build": "yarn tsc",
+    "lint": "yarn tslint --project ."
   },
   "keywords": [],
   "author": "Stephen Haberman",
