--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "devDependencies": {
     "@types/jest": "^23.3.2",
     "@types/lodash": "^4.14.117",
+    "@types/node": "^10.12.21",
     "jest": "^23.6.0",
-    "nodemon": "^1.18.3",
+    "nodemon": "^1.18.9",
     "prettier": "^1.14.3",
     "ts-jest": "^23.10.2",
     "tslint": "^5.11.0",
