--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@types/jest": "^24.0.17",
     "@types/lodash": "^4.14.137",
     "@types/node": "^12.7.2",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
+    "eslint": "^6.2.2",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
     "tslint-immutable": "^6.0.1",
     "typescript": "^3.5.3"
   },
