--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,7 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "outDir": "build",
-    "baseUrl": ".",
-    "paths": {
-      "@src/*": ["src/*"]
-    },
+    "baseUrl": "."
   },
   "include": ["src"]
 }
