--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "lib": ["esnext"],
-    "target": "esnext",
+    "target": "ES2018",
     "module": "commonjs",
     "declaration": true,
     "strict": true,
