--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build": "yarn tsc",
     "lint": "yarn tslint --project ."
   },
+  "repository": {	
+    "type": "git",
+    "url": "https://github.com/stephenh/ts-poet.git"
+  },
   "keywords": [],
   "author": "Stephen Haberman",
   "license": "Apache-2.0",
