--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-prettier": "^3.1.0",
     "jest": "^26.6.3",
+    "prettier": "^2.7.1",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "lodash": "^4.17.15",
-    "prettier": "^2.5.1"
+    "dprint-node": "^1.0.7"
   }
 }
