--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "jest": "^26.6.3",
     "prettier": "^2.7.1",
     "ts-jest": "^26.5.1",
-    "typescript": "^4.1.5"
+    "typescript": "^4.8.2"
   },
   "dependencies": {
-    "dprint-node": "^1.0.7"
+    "@dprint/formatter": "^0.2.0",
+    "@dprint/typescript": "^0.71.2"
   }
 }
