--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.137",
+    "@types/mock-fs": "^4.13.1",
     "@types/node": "^12.7.2",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
@@ -28,6 +29,7 @@
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-prettier": "^3.1.0",
     "jest": "^26.6.3",
+    "mock-fs": "^5.1.4",
     "prettier": "^2.7.1",
     "ts-jest": "^26.5.1",
     "typescript": "^4.8.2"
