feat: Move back to dprint-node to avoid wasm init.
It takes ~500ms on my laptop to load the `@dprint/typescript` WASM code.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "@dprint/formatter": "^0.2.0",
-    "@dprint/typescript": "^0.71.2"
+    "dprint-node": "^1.0.7"
   }
 }
