--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
   "dependencies": {
     "dprint-node": "^1.0.7"
   },
-  "packageManager": "yarn@3.6.3"
+  "packageManager": "yarn@4.0.0-rc.50"
 }
