--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   "author": "Stephen Haberman",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^29.5.4",
     "@types/lodash": "^4.14.137",
     "@types/mock-fs": "^4.13.1",
     "@types/node": "^12.7.2",
-    "jest": "^26.6.3",
-    "mock-fs": "^5.1.4",
-    "prettier": "^2.7.1",
-    "ts-jest": "^26.5.1",
-    "typescript": "^4.8.2"
+    "jest": "^29.6.4",
+    "mock-fs": "^5.2.0",
+    "prettier": "2.8.8",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "dprint-node": "^1.0.7"
