--- a/package.json
+++ b/package.json
@@ -30,5 +30,5 @@
   "dependencies": {
     "dprint-node": "^1.0.8"
   },
-  "packageManager": "yarn@4.0.0-rc.50"
+  "packageManager": "yarn@4.0.2"
 }
